Feature EML-485: Finished Tax even eventhandler. Added endpoint filter by tag
