# src/com/etendoerp/copilot/openapi/purchase/SetTaxAndPriceEventHandler.java
@@ -5,6 +5,7 @@ import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.text.SimpleDateFormat;
 import java.util.Date;
+import java.util.Properties;
 
 import javax.enterprise.event.Observes;
 
@@ -14,6 +15,7 @@ import org.apache.logging.log4j.Logger;
 import org.openbravo.base.model.Entity;
 import org.openbravo.base.model.ModelProvider;
 import org.openbravo.base.model.Property;
+import org.openbravo.base.session.OBPropertiesProvider;
 import org.openbravo.client.kernel.event.EntityNewEvent;
 import org.openbravo.client.kernel.event.EntityPersistenceEventObserver;
 import org.openbravo.dal.core.OBContext;
@@ -23,6 +25,7 @@ import org.openbravo.erpCommon.businessUtility.Tax;
 import org.openbravo.model.common.order.Order;
 import org.openbravo.model.common.order.OrderLine;
 import org.openbravo.model.common.plm.Product;
+import org.openbravo.model.financialmgmt.tax.TaxRate;
 import org.openbravo.model.pricing.pricelist.PriceList;
 import org.openbravo.model.pricing.pricelist.ProductPrice;
 import org.openbravo.model.project.Project;
@@ -54,11 +57,16 @@ public class SetTaxAndPriceEventHandler extends EntityPersistenceEventObserver {
 
     BigDecimal priceActual = BigDecimal.ZERO;
     String productProdId = getProductPrice(order.getOrderDate(), order.getPriceList(), ol.getProduct());
-    ProductPrice productPrice = OBDal.getInstance().get(ProductPrice.class, productProdId);
+    BigDecimal priceList = BigDecimal.ZERO;
+    BigDecimal priceStd = BigDecimal.ZERO;
+    BigDecimal priceLimit = BigDecimal.ZERO;
+    if (productProdId != null) {
+      ProductPrice productPrice = OBDal.getInstance().get(ProductPrice.class, productProdId);
 
-    BigDecimal priceList = productPrice.getListPrice();
-    BigDecimal priceStd = productPrice.getStandardPrice();
-    BigDecimal priceLimit = productPrice.getPriceLimit();
+      priceList = productPrice.getListPrice();
+      priceStd = productPrice.getStandardPrice();
+      priceLimit = productPrice.getPriceLimit();
+    }
 
     boolean isTaxIncludedPriceList = order.getPriceList().isPriceIncludesTax();
     boolean cancelPriceAd = (boolean) event.getCurrentState(propertyCancelPriceAd);
@@ -127,7 +135,7 @@ public class SetTaxAndPriceEventHandler extends EntityPersistenceEventObserver {
     if (calculatedDiscount.compareTo((BigDecimal) event.getCurrentState(PropertyDiscount)) != 0) {
       event.setCurrentState(PropertyDiscount, calculatedDiscount);
     }
-    //taxSearchAndSet(event, entity, order, product);
+    taxSearchAndSet(event, entity, order, product);
 
     log.debug("OrderLine inserted: " + ol.getId());
 
@@ -136,17 +144,19 @@ public class SetTaxAndPriceEventHandler extends EntityPersistenceEventObserver {
   private void taxSearchAndSet(EntityNewEvent event, Entity entity, Order order, Product product) {
     Property propertyTax = entity.getProperty(OrderLine.PROPERTY_TAX);
     //formate order.getOrderDate to string year-month-day. Dont use FormatUtilities
-    SimpleDateFormat dateformat = new SimpleDateFormat("yyyy-MM-dd");
+    String dateFromat = OBPropertiesProvider.getInstance().getOpenbravoProperties().getProperty("dateFormat.java");
+    SimpleDateFormat dateformat = new SimpleDateFormat(dateFromat);
     String strOrderDate = dateformat.format(order.getOrderDate());
     try {
-      DalConnectionProvider connectionProvider = new DalConnectionProvider();
+      DalConnectionProvider connectionProvider = new DalConnectionProvider(false);
       Project project = order.getProject();
 
       String strCTaxID = Tax.get(connectionProvider, product.getId(), strOrderDate, order.getOrganization().getId(),
           order.getWarehouse().getId(),
           order.getPartnerAddress().getId(),
           order.getPartnerAddress().getId(), project != null ? project.getId() : null, order.isSalesTransaction());
-      Tax tax = OBDal.getInstance().get(Tax.class, strCTaxID);
+      TaxRate tax = OBDal.getInstance().get(TaxRate.class, strCTaxID);
+      log.info("TaxRate: " + tax.getName());
       event.setCurrentState(propertyTax, tax);
     } catch (Exception e) {
       log.error("OrderLin error: " + e.getMessage());
